resolved no args issue